--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- meta tags creado en la pagina -->
      <!-- Primary Meta Tags -->
 
-<title>Aprende Css desde cero.</title>
+<title>Master en Css.</title>
 <meta name="title" content="Aprende Css desde cero." />
 <meta name="description" content="Hola soy una descripcion que veras cuando me busques en google." />
 
